fix: tvl text color for dark mode fixed

--- a/src/pages/Dashboard/PlatformTVL/PlatformTVL.css
+++ b/src/pages/Dashboard/PlatformTVL/PlatformTVL.css
@@ -1,6 +1,7 @@
 .tvl-container {
     width: 100%;
     display: flex;
+    color: var(--color_text);
 }
 
 .tvl-image {
